# quant

./: .gitignore  README.md  main.py  pyproject.toml  quant.go
basics/: time_value_of_money.py
black_scholes/: algo.py  monte_carlo_impl.py
bonds/: coupon_bond.py  price_implementation.py
capm/: pricing_model.py
data_handling/: basics.py  visual.py
get_data/: av.py
indicators/: atr.ipynb  bollinger.ipynb  macd.ipynb
markowitz/: portfolio_theory.py
monte_carlo/: stock_price.py
portfolio_theory/: more_options.txt  portfolio_theory.py
random_walk/: brown.py  geobrown.py
valueAtRisk/: var.py
value_at_risk/: monte_carlo_impl.py
